refactor() add new tags and logging