@@ -1,11 +1,18 @@
 -server
--Xmx1G
+-Xmx16G
+-XX:-UseBiasedLocking
 -XX:+UseG1GC
 -XX:G1HeapRegionSize=32M
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+UseGCOverheadLimit
 -XX:+ExitOnOutOfMemoryError
--XX:ReservedCodeCacheSize=256M
+-XX:ReservedCodeCacheSize=512M
 -Djdk.attach.allowAttachSelf=true
 -Djdk.nio.maxCachedBufferSize=2000000
+
+# Logging configuration
+-Dlog.max-size=256MB
+-Dlog.max-files=20
+-Dlog.enable-console=true
+-Dlog.retention-days=30
